--- a/index.scss
+++ b/index.scss
@@ -207,7 +207,7 @@ textarea:focus {
     }
 
     .block-controls .button + .button {
-        margin-top: 8px;
+        margin-top: 4px;
     }
 
     .button {
@@ -323,7 +323,7 @@ textarea:focus {
         font-size: 1.5rem;
         border: 0;
         border-left: 1px solid $border;
-        padding: 0 0.8rem;
+        padding: 0 10px;
     }
 
     ul {
@@ -520,11 +520,13 @@ textarea:focus {
         height: calc(60% - 60px);
     }
 
-    .pages > .items {
+    .pages > .items,
+    .projects > .items {
         height: calc(100% - 60px);
     }
 
-    .pages .page {
+    .pages .page,
+    .projects .page {
         position: relative;
         padding-left: 45px;
         padding-right: 45px;
