--- a/index.scss
+++ b/index.scss
@@ -13,6 +13,7 @@ $input-icon-color: darken($grey-light, 10);
 $input-background-color: transparent;
 $input-hover-color: $grey-light;
 $input-border-color: $border;
+$modal-background-background-color: rgba(black, 0.7);
 
 @import "node_modules/bulma/bulma";
 
@@ -505,6 +506,13 @@ textarea:focus {
     .panel-block:last-child {
         border-bottom: 0;
     }
+
+    .panel-block.is-active {
+        color: $white;
+        background: $dark;
+        border-bottom: 1px solid $grey-light;
+        border-top: 1px solid $grey-light;
+    };
 }
 
 // ------------------ //
