--- a/index.scss
+++ b/index.scss
@@ -398,6 +398,18 @@ textarea:focus {
     }
 }
 
+.add-tab,
+.proj-save,
+.proj-saveas {
+    & {
+        display: none;
+    }
+
+    .has-bottom & {
+        display: block;
+    }
+}
+
 // ------------------ //
 //  Main Block
 // ------------------ //
@@ -513,6 +525,18 @@ textarea:focus {
         border-bottom: 1px solid $grey-light;
         border-top: 1px solid $grey-light;
     };
+
+    .bottom {
+        height: 40px;
+        border-bottom: 0;
+        border-top: 0;
+        padding: 5px;
+    }
+
+    .bottom .button {
+        height: 30px;
+        padding: 0 0.75em;
+    }
 }
 
 // ------------------ //
@@ -556,7 +580,7 @@ textarea:focus {
     }
 
     .projects {
-        height: 40%;
+        height: calc(40% - 40px);
     }
 
     .page > .button,
@@ -702,18 +726,6 @@ textarea:focus {
 
     .control + .control {
         border-left: 1px solid $border;
-    }
-
-    .bottom {
-        height: 40px;
-        border-bottom: 0;
-        border-top: 0;
-        padding: 5px;
-    }
-
-    .bottom .button {
-        height: 30px;
-        padding: 0 0.75em;
     }
 
     .search.input {
