--- a/index.css
+++ b/index.css
@@ -13091,6 +13091,10 @@ textarea:focus {
   box-shadow: inset 0 0 0 2px #4E5D6C !important;
 }
 
+.events-none .sound-block {
+  pointer-events: none;
+}
+
 .has-bottom .main {
   background-image: linear-gradient(#2B3E50 1px, transparent 1px), linear-gradient(90deg, #2B3E50 1px, transparent 1px);
   background-size: 10px 10px;
