Fix search icon and deck item counters, add hotkey to close all tabs

--- a/index.css
+++ b/index.css
@@ -13143,7 +13143,7 @@ textarea:focus {
 .panel .panel-search {
   margin-bottom: 0;
 }
-.panel .panel-search .icon:first-child {
+.panel .panel-search .icon:only-child {
   display: none;
 }
 .panel .panel-search .input,
