--- a/index.scss
+++ b/index.scss
@@ -516,7 +516,7 @@ textarea:focus {
             margin-bottom: 0;
         }
 
-        .icon:first-child {
+        .icon:only-child {
             display: none;
         }
 
