--- a/index.css
+++ b/index.css
@@ -13516,6 +13516,32 @@ textarea:focus {
   margin-top: 1rem;
 }
 
+.modal .content .img {
+  border-radius: 10px;
+}
+.modal .content img {
+  vertical-align: middle;
+}
+.modal .content h3 {
+  margin-bottom: 0.5rem;
+}
+.modal .content h3:first-of-type {
+  margin-top: 0.5rem;
+}
+.modal .content h2.title {
+  margin: 1rem 0;
+  font-weight: bold;
+}
+.modal .content h4.title {
+  margin: 1rem 0 0.5rem;
+}
+.modal .content p {
+  margin: 0.5rem 0;
+}
+.modal .content p:last-child {
+  margin-bottom: 0;
+}
+
 .modal-card-head,
 .modal-card-body {
   padding: 0.8rem;
